save data in server

--- a/static/index.html
+++ b/static/index.html
@@ -20,8 +20,10 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<div id="header">
-
+<div id="header" style="height: 70px; padding-top: 20px">
+    <h3 id="intro">
+        Hi, I'm Nguyen Ngoc Duc! I'm front-end developer and competitive programmer
+    </h3>
 </div>
 <div id="main">
     <div id="left">
@@ -91,9 +93,8 @@
     </div>
     <div id="center">
         <div class="button-group">
-            <button class="button" id="view mode">View mode</button>
-            <button class="button checked" id="select mode">Select mode</button>
-            <button class="button" id="delete mode">Delete mode</button>
+            <button class="button" id="dark mode">Dark Mode</button>
+            <button class="button checked" id="light mode">Light Mode</button>
         </div>
         <div id="box1" class="jxgbox" style="width: 700px; height: 700px;"></div>
     </div>
